# gp_logger

./: CMakeLists.txt  README.md
include/: gp_logger.h
include/typedefs/: colors.h  errors.h
src/: gp_logger.c
test/: gp__logger__test.c  test.c
